# contravariant-case

./: README.md  contravariant-case.cabal  stack.yaml
src/: ContravariantCase.hs
